--- a/index.html
+++ b/index.html
@@ -2,21 +2,35 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>리즈왕의 주식 분석 페이지</title>
-    <style>
-        body { font-family: sans-serif; text-align: center; padding: 50px; }
-        .container { border: 2px solid #007bff; border-radius: 15px; padding: 20px; display: inline-block; }
-        h1 { color: #007bff; }
-        p { color: #666; }
-    </style>
+    <title>ejaekwang의 코스피 리포트</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>📈 리즈왕의 KOSPI 데이터 분석</h1>
-        <p>2025년 11월 - 12월 코스피 지수 그래프입니다.</p>
-        <img src="kospi_graph.png" alt="코스피 그래프" style="max-width: 100%; height: auto;">
-        <br>
-        <p>데이터와 그래프 저장이 완료되었습니다!</p>
+        <header>
+            <h1>📈 KOSPI 분석 프로젝트</h1>
+            <p>데이터로 보는 시장의 흐름</p>
+        </header>
+
+        <main>
+            <section class="card">
+                <h2>오늘의 분석 요약</h2>
+                <p>분석된 코스피 지수 그래프입니다.</p>
+                
+                <div class="graph-container" style="text-align: center; margin: 20px 0; background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 8px;">
+                    <img src="kospi_graph.png" alt="코스피 분석 그래프" style="max-width: 100%; height: auto; border-radius: 4px;">
+                    <p style="font-size: 0.8rem; color: #888; margin-top: 5px;">▲ 생성된 코스피 분석 그래프 (kospi_graph.png)</p>
+                </div>
+
+                <div class="data-box">
+                    <strong>현재 상태:</strong> <span>그래프 시각화 완료</span>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2026 ejaekwang. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
